Add insert and update new/exisiting pizzas
